@@ -1,6 +1,9 @@
 2010-xx-xx:
     * version 2.4
     * Fix relative paths in :cd
+    * Support rich text editor written by HTML.
+      mode is into editing mode (INSERT, TEXTAREA, VISUAL) if the focused window is editable.
+      And update map [m]i[m]: into be editing mode if editable otherwise CARET mode.
 
 2010-04-07:
     * version 2.3.1
